--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 
 <body>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
 	<a href="#">Deva Palasingam</a>
 	
 	<ul>
@@ -54,6 +56,8 @@
 		</li>
 
 	</ul>
+
+	<footer>&copy;Copyright 2017 Deva Palasingam</footer>
 
 </body>
 
