About Me page HTML complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<h1>About Me</h1>
 	
-	<img src="assets/images/Deva-img.jpg" alt="Deva">
+	<img src="assets/images/Deva-img.jpg" alt="Deva" width=200px height=200px>
 	
 	<p>They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...</p>
 
@@ -39,19 +39,19 @@
 		
 		<li>
 			<a href="#">
-				<img src="#" alt="GitHub">
+				<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
 			</a>
 		</li>
 
 		<li>
 			<a href="#">
-				<img src="#" alt="LinkedIn">
+				<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
 			</a>
 		</li>
 
 		<li>
 			<a href="#">
-				<img src="#" alt="StackOverflow">
+				<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
 			</a>
 		</li>
 
