Completed Contact html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title> Deva Palasingam</title>
+	<title> Deva Palasingam About Me</title>
 
 </head>
 
@@ -15,7 +15,7 @@
 	
 	<ul>
 		<li>
-			<a href="#">About</a>
+			<a href="index.html">About</a>
 		</li>
 		
 		<li>
@@ -23,7 +23,7 @@
 		</li>
 
 		<li>
-			<a href="#">Contact</a>
+			<a href="contact.html">Contact</a>
 		</li>
 	</ul>
 
@@ -33,24 +33,24 @@
 	
 	<p>They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...</p>
 
-	<h3>Connect with me</h3>
+	<h2>Connect with me</h2>
 	
 	<ul>
 		
 		<li>
-			<a href="#">
+			<a href="https://github.com/DevaPalasingam">
 				<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
 			</a>
 		</li>
 
 		<li>
-			<a href="#">
+			<a href="https://www.linkedin.com/in/deva-palasingam">
 				<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
 			</a>
 		</li>
 
 		<li>
-			<a href="#">
+			<a href="https://stackoverflow.com/users/8661532/deva">
 				<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
 			</a>
 		</li>
