Finished Portfolio html

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-		<a href="#">Deva Palasingam</a>
+		<a href="index.html">Deva Palasingam</a>
 		
 		<ul>
 			<li>
@@ -20,7 +20,7 @@
 			</li>
 			
 			<li>
-				<a href="#">Portfolio</a>
+				<a href="portfolio.html">Portfolio</a>
 			</li>
 
 			<li>
@@ -30,19 +30,19 @@
 	
 	<h1>Contact</h1>
 
-	<h2>Name</h2>
+	<h3>Name</h3>
 	<textarea name="text" cols="100" rows="1">
 	John Smith
 	</textarea>
 
 
-	<h2>Email</h2>
+	<h3>Email</h3>
 	<textarea name="text" cols="100" rows="1">
 	example@gmail.com
 	</textarea>
 	
 
-	<h2>Message</h2>
+	<h3>Message</h3>
 	<textarea name="text" cols="100" rows="10">
 	</textarea>
 
