--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<a href="#">Deva Palasingam</a>
+	<a href="index.html">Deva Palasingam</a>
 	
 	<ul>
 		<li>
@@ -19,7 +19,7 @@
 		</li>
 		
 		<li>
-			<a href="#">Portfolio</a>
+			<a href="portfolio.html">Portfolio</a>
 		</li>
 
 		<li>
@@ -29,7 +29,7 @@
 
 	<h1>About Me</h1>
 	
-	<img src="assets/images/Deva-img.jpg" alt="Deva" width=200px height=200px>
+	<img src="assets/images/Deva-img.jpg" alt="Deva">
 	
 	<p>They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...</p>
 
