--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
 <body>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<a href="index.html">Deva Palasingam</a>
-	
-	<ul>
-		<li>
-			<a href="index.html">About</a>
-		</li>
-		
-		<li>
-			<a href="portfolio.html">Portfolio</a>
-		</li>
+	<link rel="stylesheet" type="text/css" href="style.css">
 
-		<li>
-			<a href="contact.html">Contact</a>
-		</li>
-	</ul>
+	<div class="heading">
+	<a href="index.html">Deva Palasingam</a>
+	</div>
+	
+	<section class="sidebar">
+		<ul>
+			<li>
+				<a href="index.html">About</a>
+			</li>
+			
+			<li>
+				<a href="portfolio.html">Portfolio</a>
+			</li>
+
+			<li>
+				<a href="contact.html">Contact</a>
+			</li>
+		</ul>
+	</section>
 
 	<h1>About Me</h1>
 	
