Worked on the CSS

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+	<section class="wrapper">
 
 		<div class="heading">
 			<a href="index.html">Deva Palasingam</a>
@@ -35,53 +37,65 @@
 			</ul>
 		</section>
 	
-	<h1>Contact</h1>
+		<section class="left-box">
 
-	<h3>Name</h3>
-	<textarea name="text" cols="100" rows="1">
-	John Smith
-	</textarea>
+			<h1>Contact</h1>
 
-
-	<h3>Email</h3>
-	<textarea name="text" cols="100" rows="1">
-	example@gmail.com
-	</textarea>
-	
-
-	<h3>Message</h3>
-	<textarea name="text" cols="100" rows="10">
-	</textarea>
+			<h3>Name</h3>
+			<textarea name="text" cols="100" rows="1">
+			John Smith
+			</textarea>
 
 
-	<button type="button" onclick="alert('Thank you for your submission')">Submit</button>
+			<h3>Email</h3>
+			<textarea name="text" cols="100" rows="1">
+			example@gmail.com
+			</textarea>
+			
+
+			<h3>Message</h3>
+			<textarea name="text" cols="100" rows="10">
+			
+			</textarea>
 
 
-	<h2>Connect with me</h2>
-	
-	<ul>
+			<button type="button" onclick="alert('Thank you for your submission')">Submit</button>
+
+		</section>
 		
-		<li>
-			<a href="https://github.com/DevaPalasingam">
-				<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
-			</a>
-		</li>
+		<section class="right-box">
 
-		<li>
-			<a href="https://www.linkedin.com/in/deva-palasingam">
-				<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
-			</a>
-		</li>
+			<h2>Connect with me</h2>
+			
 
-		<li>
-			<a href="https://stackoverflow.com/users/8661532/deva">
-				<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
-			</a>
-		</li>
+			<ul>
+				
+				<li class="social-network">
+					<a href="https://github.com/DevaPalasingam">
+						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
+					</a>
+				</li>
 
-	</ul>
+				<li class="social-network">
+					<a href="https://www.linkedin.com/in/deva-palasingam">
+						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
+					</a>
+				</li>
 
-	<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+				<li class="social-network">
+					<a href="https://stackoverflow.com/users/8661532/deva">
+						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
+					</a>
+				</li>
+
+			</ul>
+
+
+		</section>
+
+		<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+		
+	</section>
 
 </body>
 </html>
