--- a/index.html
+++ b/index.html
@@ -11,59 +11,76 @@
 <body>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<div class="heading">
-	<a href="index.html">Deva Palasingam</a>
-	</div>
-	
-	<section class="sidebar">
-		<ul>
-			<li>
-				<a href="index.html">About</a>
-			</li>
-			
-			<li>
-				<a href="portfolio.html">Portfolio</a>
-			</li>
+	<section class="wrapper">
 
-			<li>
-				<a href="contact.html">Contact</a>
-			</li>
-		</ul>
-	</section>
-
-	<h1>About Me</h1>
-	
-	<img src="assets/images/Deva-img.jpg" alt="Deva">
-	
-	<p>They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...</p>
-
-	<h2>Connect with me</h2>
-	
-	<ul>
+		<div class="heading">
+			<a href="index.html">Deva Palasingam</a>
+		</div>
 		
-		<li>
-			<a href="https://github.com/DevaPalasingam">
-				<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
-			</a>
-		</li>
+		<section class="sidebar">
+			<ul>
+				<li>
+					<a href="index.html">About</a>
+				</li>
+				
+				<li>
+					<a href="portfolio.html">Portfolio</a>
+				</li>
 
-		<li>
-			<a href="https://www.linkedin.com/in/deva-palasingam">
-				<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
-			</a>
-		</li>
+				<li>
+					<a href="contact.html">Contact</a>
+				</li>
+			</ul>
+		</section>
 
-		<li>
-			<a href="https://stackoverflow.com/users/8661532/deva">
-				<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
-			</a>
-		</li>
+		<section class="left-box">
 
-	</ul>
+			<h1>About Me</h1>
+			
+			<div class="profile-img">
+				<img src="assets/images/Deva-img.jpg" alt="Deva">
+			</div>
 
-	<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+			<p>They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...</p>
+		
+		</section>
+		
+
+		<section class="right-box">
+
+			<h2>Connect with me</h2>
+			
+
+			<ul>
+				
+				<li class="social-network">
+					<a href="https://github.com/DevaPalasingam">
+						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
+					</a>
+				</li>
+
+				<li class="social-network">
+					<a href="https://www.linkedin.com/in/deva-palasingam">
+						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
+					</a>
+				</li>
+
+				<li class="social-network">
+					<a href="https://stackoverflow.com/users/8661532/deva">
+						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
+					</a>
+				</li>
+
+			</ul>
+
+
+		</section>
+
+		<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+
+	</section>
 
 </body>
 
