--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,12 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+	<section class="wrapper">
 
 		<div class="heading">
-		<a href="index.html">Deva Palasingam</a>
+			<a href="index.html">Deva Palasingam</a>
 		</div>
 		
 		<section class="sidebar">
@@ -35,54 +37,63 @@
 				</li>
 			</ul>
 		</section>
-	
-	<h1>Portfolio</h1>
-
-	<h3>Hangman</h3>
-	<img src="assets/images/RandomImage1.jpg" alt="GitHub" width=400px height=200px>
-
-
-	<h3>RPG Game</h3>
-	<img src="assets/images/RandomImage2.jpg" alt="GitHub" width=400px height=200px>
-	
-
-	<h3>Trivia Game</h3>
-	<img src="assets/images/RandomImage3.jpg" alt="GitHub" width=400px height=200px>
-
-
-	<h3>Rutgers Info Widget</h3>
-	<img src="assets/images/RandomImage4.jpg" alt="GitHub" width=400px height=200px>
-
-
-	<h3>Rock Paper Scissors</h3>
-	<img src="assets/images/RandomImage5.jpg" alt="GitHub" width=400px height=200px>
-
-
-	<h2>Connect with me</h2>
-
-	
-	<ul>
 		
-		<li>
-			<a href="https://github.com/DevaPalasingam">
-				<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
-			</a>
-		</li>
+		<section class="left-box">
 
-		<li>
-			<a href="https://www.linkedin.com/in/deva-palasingam">
-				<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
-			</a>
-		</li>
+			<h1>Portfolio</h1>
 
-		<li>
-			<a href="https://stackoverflow.com/users/8661532/deva">
-				<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
-			</a>
-		</li>
+			<h3>Hangman</h3>
+			<img src="assets/images/RandomImage1.jpg" alt="GitHub" width=400px height=200px>
 
-	</ul>
 
+			<h3>RPG Game</h3>
+			<img src="assets/images/RandomImage2.jpg" alt="GitHub" width=400px height=200px>
+			
+
+			<h3>Trivia Game</h3>
+			<img src="assets/images/RandomImage3.jpg" alt="GitHub" width=400px height=200px>
+
+
+			<h3>Rutgers Info Widget</h3>
+			<img src="assets/images/RandomImage4.jpg" alt="GitHub" width=400px height=200px>
+
+
+			<h3>Rock Paper Scissors</h3>
+			<img src="assets/images/RandomImage5.jpg" alt="GitHub" width=400px height=200px>
+
+		</section>
+
+		<section class="right-box">
+
+			<h2>Connect with me</h2>
+
+
+			<ul>
+				
+				<li class="social-network">
+					<a href="https://github.com/DevaPalasingam">
+						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
+					</a>
+				</li>
+
+				<li class="social-network">
+					<a href="https://www.linkedin.com/in/deva-palasingam">
+						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
+					</a>
+				</li>
+
+				<li class="social-network">
+					<a href="https://stackoverflow.com/users/8661532/deva">
+						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
+					</a>
+				</li>
+
+			</ul>
+
+
+		</section>
+		
+	</section>
 
 </body>
 </html>
