--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,15 @@
 
 		<section class="sidebar">
 			<ul>
-				<li>
+				<li class="sidebar-item">
 					<a href="index.html">About</a>
 				</li>
 				
-				<li>
+				<li class="sidebar-item">
 					<a href="portfolio.html">Portfolio</a>
 				</li>
 
-				<li>
+				<li class="sidebar-item">
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
@@ -42,19 +42,19 @@
 			<h1>Contact</h1>
 
 			<h3>Name</h3>
-			<textarea name="text" cols="100" rows="1">
+			<textarea name="text" cols="60" rows="1">
 			John Smith
 			</textarea>
 
 
 			<h3>Email</h3>
-			<textarea name="text" cols="100" rows="1">
+			<textarea name="text" cols="60" rows="1">
 			example@gmail.com
 			</textarea>
 			
 
 			<h3>Message</h3>
-			<textarea name="text" cols="100" rows="10">
+			<textarea name="text" cols="60" rows="10">
 			
 			</textarea>
 
@@ -72,19 +72,19 @@
 				
 				<li class="social-network">
 					<a href="https://github.com/DevaPalasingam">
-						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
+						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80 height=80>
 					</a>
 				</li>
 
 				<li class="social-network">
 					<a href="https://www.linkedin.com/in/deva-palasingam">
-						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
+						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80 height=80>
 					</a>
 				</li>
 
 				<li class="social-network">
 					<a href="https://stackoverflow.com/users/8661532/deva">
-						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
+						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80 height=80>
 					</a>
 				</li>
 
@@ -93,9 +93,17 @@
 
 		</section>
 
-		<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+		<!-- <footer>&copy;Copyright 2017 Deva Palasingam</footer> -->
+
+	</section>	
+
+	<div class="copyright-background">
 		
-	</section>
+		<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+	
+	</div>
+
+	
 
 </body>
 </html>
