--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 		
 		<section class="sidebar">
 			<ul>
-				<li>
+				<li class="sidebar-item">
 					<a href="index.html">About</a>
 				</li>
 				
-				<li>
+				<li class="sidebar-item">
 					<a href="portfolio.html">Portfolio</a>
 				</li>
 
-				<li>
+				<li class="sidebar-item">
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
@@ -43,7 +43,17 @@
 				<img src="assets/images/Deva-img.jpg" alt="Deva">
 			</div>
 
-			<p>They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...</p>
+			<p>	
+				They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...
+			</p>
+
+			<p>
+				Bacon ipsum dolor amet boudin pork loin ham hock meatloaf pig leberkas. Ribeye ham hock beef ribs jerky pork belly bacon chuck corned beef pastrami drumstick pancetta shoulder. Pastrami bacon cupim tri-tip ham filet mignon. Pastrami picanha sausage cupim beef ground round. Pork chop biltong cow ham tenderloin, tongue cupim beef ribs. Turducken tongue pork belly, corned beef fatback tri-tip ham hock chuck frankfurter jerky bresaola pig capicola cow. Beef landjaeger ham hock, strip steak swine pork prosciutto.
+			</p>
+
+			<p>
+				Doner cupim biltong tail alcatra, tri-tip venison leberkas tenderloin. Turkey corned beef jerky, ribeye cow boudin pig sausage pork loin andouille. Tri-tip shoulder tenderloin, burgdoggen pork picanha chuck venison chicken pancetta t-bone meatloaf bacon tongue. Doner tail salami jerky kielbasa beef shankle swine andouille brisket frankfurter drumstick bacon rump. Drumstick pastrami filet mignon turkey tenderloin.
+			</p>
 		
 		</section>
 		
@@ -57,30 +67,38 @@
 				
 				<li class="social-network">
 					<a href="https://github.com/DevaPalasingam">
-						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
+						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80 height=80>
 					</a>
 				</li>
 
 				<li class="social-network">
 					<a href="https://www.linkedin.com/in/deva-palasingam">
-						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
+						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80 height=80>
 					</a>
 				</li>
 
 				<li class="social-network">
 					<a href="https://stackoverflow.com/users/8661532/deva">
-						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
+						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80 height=80>
 					</a>
 				</li>
 
 			</ul>
 
 
-		</section>
+		</section>	
+		
+		<!-- <footer>&copy;Copyright 2017 Deva Palasingam</footer> -->
 
+	</section>	
+
+	<div class="copyright-background">
+		
 		<footer>&copy;Copyright 2017 Deva Palasingam</footer>
 
-	</section>
+	</div>
+
+	
 
 </body>
 
