--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,15 @@
 		
 		<section class="sidebar">
 			<ul>
-				<li>
+				<li class="sidebar-item">
 					<a href="index.html">About</a>
 				</li>
 				
-				<li>
+				<li class="sidebar-item">
 					<a href="portfolio.html">Portfolio</a>
 				</li>
 
-				<li>
+				<li class="sidebar-item">
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
@@ -43,23 +43,23 @@
 			<h1>Portfolio</h1>
 
 			<h3>Hangman</h3>
-			<img src="assets/images/RandomImage1.jpg" alt="GitHub" width=400px height=200px>
+			<img src="assets/images/RandomImage1.jpg" alt="GitHub" width=400 height=200>
 
 
 			<h3>RPG Game</h3>
-			<img src="assets/images/RandomImage2.jpg" alt="GitHub" width=400px height=200px>
+			<img src="assets/images/RandomImage2.jpg" alt="GitHub" width=400 height=200>
 			
 
 			<h3>Trivia Game</h3>
-			<img src="assets/images/RandomImage3.jpg" alt="GitHub" width=400px height=200px>
+			<img src="assets/images/RandomImage3.jpg" alt="GitHub" width=400 height=200>
 
 
 			<h3>Rutgers Info Widget</h3>
-			<img src="assets/images/RandomImage4.jpg" alt="GitHub" width=400px height=200px>
+			<img src="assets/images/RandomImage4.jpg" alt="GitHub" width=400 height=200>
 
 
 			<h3>Rock Paper Scissors</h3>
-			<img src="assets/images/RandomImage5.jpg" alt="GitHub" width=400px height=200px>
+			<img src="assets/images/RandomImage5.jpg" alt="GitHub" width=400 height=200>
 
 		</section>
 
@@ -72,19 +72,19 @@
 				
 				<li class="social-network">
 					<a href="https://github.com/DevaPalasingam">
-						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80px height=80px>
+						<img src="assets/images/GitHubLogo.jpg" alt="GitHub" width=80 height=80>
 					</a>
 				</li>
 
 				<li class="social-network">
 					<a href="https://www.linkedin.com/in/deva-palasingam">
-						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80px height=80px>
+						<img src="assets/images/LinkedInLogo.jpg" alt="LinkedIn" width=80 height=80>
 					</a>
 				</li>
 
 				<li class="social-network">
 					<a href="https://stackoverflow.com/users/8661532/deva">
-						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80px height=80px>
+						<img src="assets/images/StackOverflowIcon.jpg" alt="StackOverflow" width=80 height=80>
 					</a>
 				</li>
 
@@ -93,7 +93,15 @@
 
 		</section>
 		
+		<!-- <footer>&copy;Copyright 2017 Deva Palasingam</footer> -->
+
 	</section>
+	
+	<div class="copyright-background">
+		
+		<footer>&copy;Copyright 2017 Deva Palasingam</footer>
+
+	</div>
 
 </body>
 </html>
