--- a/contact.html
+++ b/contact.html
@@ -14,28 +14,35 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<div class="topline-background"></div>
+
 	<section class="wrapper">
 
-		<div class="heading">
-			<a href="index.html">Deva Palasingam</a>
-		</div>
+			
+		<section class="topline">
+
+			<div class="heading">
+				Deva Palasingam
+			</div>
 
 
-		<section class="sidebar">
-			<ul>
-				<li class="sidebar-item">
-					<a href="index.html">About</a>
-				</li>
-				
-				<li class="sidebar-item">
-					<a href="portfolio.html">Portfolio</a>
-				</li>
+			<section class="sidebar">
+				<ul>
+					<li class="sidebar-item">
+						<a href="index.html">About</a>
+					</li>
+					
+					<li class="sidebar-item">
+						<a href="portfolio.html">Portfolio</a>
+					</li>
 
-				<li class="sidebar-item">
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
-		</section>
+					<li class="sidebar-item">
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</section>
+
+		</section>	
 	
 		<section class="left-box">
 
