finished contact page css

--- a/contact.html
+++ b/contact.html
@@ -48,32 +48,31 @@
 
 			<h1>Contact</h1>
 
-			<h3>Name</h3>
-			<textarea name="text" cols="60" rows="1">
-			John Smith
-			</textarea>
+			<section class="fill-in">
+
+				<h3>Name</h3>
+				<textarea name="text" cols="78" rows="1">John Smith</textarea>
 
 
-			<h3>Email</h3>
-			<textarea name="text" cols="60" rows="1">
-			example@gmail.com
-			</textarea>
-			
+				<h3>Email</h3>
+				<textarea name="text" cols="78" rows="1">example@gmail.com</textarea>
+				
 
-			<h3>Message</h3>
-			<textarea name="text" cols="60" rows="10">
-			
-			</textarea>
+				<h3>Message</h3>
+				<textarea name="text" cols="78" rows="10"></textarea>
+
+			</section>
 
 
-			<button type="button" onclick="alert('Thank you for your submission')">Submit</button>
+			<a href="contact.html">
+				<div class="submit">Submit</div>
+			</a>
 
 		</section>
 		
 		<section class="right-box">
 
 			<h2>Connect with me</h2>
-			
 
 			<ul>
 				
@@ -99,8 +98,6 @@
 
 
 		</section>
-
-		<!-- <footer>&copy;Copyright 2017 Deva Palasingam</footer> -->
 
 	</section>	
 
