finished portfolio page css

--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,21 @@
 			<section class="sidebar">
 				<ul>
 					<li class="sidebar-item">
-						<a href="index.html">About</a>
+						<a href="index.html">
+							<div class="about">About</div>
+						</a>
 					</li>
 					
 					<li class="sidebar-item">
-						<a href="portfolio.html">Portfolio</a>
+						<a href="portfolio.html">
+							<div class="portfolio">Portfolio</div>
+						</a>
 					</li>
 
 					<li class="sidebar-item">
-						<a href="contact.html">Contact</a>
+						<a href="contact.html">
+							<div class="contact">Contact</div>
+						</a>
 					</li>
 				</ul>
 			</section>
