--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,21 @@
 			<section class="sidebar">
 				<ul>
 					<li class="sidebar-item">
-						<a href="index.html">About</a>
+						<a href="index.html">
+							<div class="about">About</div>
+						</a>
 					</li>
 					
 					<li class="sidebar-item">
-						<a href="portfolio.html">Portfolio</a>
+						<a href="portfolio.html">
+							<div class="portfolio">Portfolio</div>
+						</a>
 					</li>
 
 					<li class="sidebar-item">
-						<a href="contact.html">Contact</a>
+						<a href="contact.html">
+							<div class="contact">Contact</div>
+						</a>
 					</li>
 				</ul>
 			</section>
@@ -48,24 +54,31 @@
 
 			<h1>Portfolio</h1>
 
-			<h3>Hangman</h3>
-			<img src="assets/images/RandomImage1.jpg" alt="GitHub" width=400 height=200>
-
-
-			<h3>RPG Game</h3>
-			<img src="assets/images/RandomImage2.jpg" alt="GitHub" width=400 height=200>
 			
+			<section class="project-link-odd">
+				<div class="project-text" >Hangman</div>
+				<img src="assets/images/RandomImage1.jpg" alt="GitHub" width=280 height=140>
+			</section>
 
-			<h3>Trivia Game</h3>
-			<img src="assets/images/RandomImage3.jpg" alt="GitHub" width=400 height=200>
+			<section class="project-link-even">
+				<div class="project-text" >RPG Game</div>
+				<img src="assets/images/RandomImage2.jpg" alt="GitHub" width=280 height=140>
+			</section>
 
+			<section class="project-link-odd">
+				<div class="project-text" >Trivia Game</div>
+				<img src="assets/images/RandomImage3.jpg" alt="GitHub" width=280 height=140>
+			</section>	
 
-			<h3>Rutgers Info Widget</h3>
-			<img src="assets/images/RandomImage4.jpg" alt="GitHub" width=400 height=200>
+			<section class="project-link-even">	
+				<div class="project-text" >Rutgers Info Widget</div>
+				<img src="assets/images/RandomImage4.jpg" alt="GitHub" width=280 height=140>
+			</section>	
 
-
-			<h3>Rock Paper Scissors</h3>
-			<img src="assets/images/RandomImage5.jpg" alt="GitHub" width=400 height=200>
+			<section class="project-link-odd">
+				<div class="project-text" >Rock Paper Scissors</div>
+				<img src="assets/images/RandomImage5.jpg" alt="GitHub" width=280 height=140>
+			</section>
 
 		</section>
 
