--- a/index.html
+++ b/index.html
@@ -56,19 +56,31 @@
 			</div>
 
 			<p>	
-				They must be delivered safely or other star systems will suffer the same fate as Alderaan. Your destiny lies along a different path than mine. The Force will be with you...always! Boy you said it, Chewie. Where did you dig up that old fossil? Ben is a great man. Yeah, great at getting us into trouble. I didn't hear you give any ideas... Well, anything would be better than just hanging around waiting for him to pick us up... Who do you think...
+				Hi! My name is Deva Palasingam. I graduated from UT Austin with an Electrical Engineering degree in 2015. I spent two years working as a hardware engineer. But now I'm working hard to make a switch to web development. It'll be hard, but I'm sure I'll have fun along the way.
 			</p>
 			
 			<br>
 
 			<p>
-				Bacon ipsum dolor amet boudin pork loin ham hock meatloaf pig leberkas. Ribeye ham hock beef ribs jerky pork belly bacon chuck corned beef pastrami drumstick pancetta shoulder. Pastrami bacon cupim tri-tip ham filet mignon. Pastrami picanha sausage cupim beef ground round. Pork chop biltong cow ham tenderloin, tongue cupim beef ribs. Turducken tongue pork belly, corned beef fatback tri-tip ham hock chuck frankfurter jerky bresaola pig capicola cow. Beef landjaeger ham hock, strip steak swine pork prosciutto.
+				A bit about me: My typical days these days are spent coding and learning about code. I also help out at my local church. I enjoy food for thought and thoughts of food. I like puzzles, brain teasers, and anything that makes me laugh.
 			</p>
 
 			<br>
 
 			<p>
-				Doner cupim biltong tail alcatra, tri-tip venison leberkas tenderloin. Turkey corned beef jerky, ribeye cow boudin pig sausage pork loin andouille. Tri-tip shoulder tenderloin, burgdoggen pork picanha chuck venison chicken pancetta t-bone meatloaf bacon tongue. Doner tail salami jerky kielbasa beef shankle swine andouille brisket frankfurter drumstick bacon rump. Drumstick pastrami filet mignon turkey tenderloin.
+				Here's some food for thought, recently featured by the good people of TED-Ed: Are we a body with a mind or a mind with a body? Be careful how you answer. If we're a body with a mind, then our "mind" is nothing more than chemical reactions in our brain. Love, emotions, morality, even conciousness, all of those things are mere illusions. Fundamentally we are not really any different from a robot or even a rock, for that matter.
+			</p>
+
+			<br>	
+
+			<p>
+				If we're a mind with a body, then that mind must have a fully or partially non-physical existence. But then there must exist things that are non-physical, a spiritual realm if you don't mind me calling it that.
+			</p>
+
+			<br>
+
+			<p>
+				Some follow up questions: Which do we intellectually believe? Which one seems more in alignment with our experience of reality? Do we live in a way that is logically consistent with the one we belive?
 			</p>
 		
 		</section>
