--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
 			<br>
 
 			<p>
-				Here's some food for thought, recently featured by the good people of TED-Ed: Are we a body with a mind or a mind with a body? Be careful how you answer. If we're a body with a mind, then our "mind" is nothing more than chemical reactions in our brain. Love, emotions, morality, even conciousness, all of those things are mere illusions. Fundamentally we are not really any different from a robot or even a rock, for that matter.
+				Here's some food for thought, recently featured by the good people of TED-Ed: Are we a body with a mind or a mind with a body? Be careful how you answer. 
+			</p>	
+
+			<br>
+				
+			<p>
+				If we're a body with a mind, then our "mind" is nothing more than chemical reactions in our brain. Love, emotions, morality, even conciousness, all of those things are mere illusions. Fundamentally we are not really any different from a robot or even a rock, for that matter.
 			</p>
 
 			<br>	
@@ -80,7 +86,7 @@
 			<br>
 
 			<p>
-				Some follow up questions: Which do we intellectually believe? Which one seems more in alignment with our experience of reality? Do we live in a way that is logically consistent with the one we belive?
+				Some follow up questions: Which do we intellectually believe? Which one seems more in alignment with our experience of reality? Do we live in a way that is logically consistent with the one we belive? What are the ramifications with regards to purpose, morality, and how we live our life?
 			</p>
 		
 		</section>
